# crewai-blog-writer

./: README.md  requirements.txt
scripts/: 01_blog_post_crew.ipynb  05_criando_uma_tool.ipynb
scripts/02_projeto_para_producao/: README.md  report.md
scripts/02_projeto_para_producao/src/projeto_para_producao/: crew.py  main.py  report.md
scripts/03_create_crew_project/output/: agents.yaml  crew.py  tasks.yaml
scripts/03_create_crew_project/src/create_crew_project/: crew.py  main.py
scripts/03_create_crew_project/src/create_crew_project/config/: agents.yaml  tasks.yaml
scripts/04_create_blogpost_w_tools/: README.md  Relatorio_de_Pesquisa_Modelos_LLM_Multimodais_2025.txt  pyproject.toml
scripts/04_create_blogpost_w_tools/src/create_blogpost_w_tools/: crew.py  main.py
scripts/04_create_blogpost_w_tools/src/create_blogpost_w_tools/config/: agents.yaml  tasks.yaml
scripts/05_tools_personalizadas/: README.md  pyproject.toml
scripts/05_tools_personalizadas/src/tools_personalizadas/: crew.py  main.py
scripts/05_tools_personalizadas/src/tools_personalizadas/tools/: custom_tool.py
