[project]
name = "tools_personalizadas"
version = "0.1.0"
description = "tools_personalizadas using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
tools_personalizadas = "tools_personalizadas.main:run"
run_crew = "tools_personalizadas.main:run"
train = "tools_personalizadas.main:train"
replay = "tools_personalizadas.main:replay"
test = "tools_personalizadas.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
